--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,9 @@
 eclipse.preferences.version=1
+encoding//WebContent/cms/main/friendlink/add.html=UTF-8
+encoding//WebContent/cms/main/jeasyui.common.new.js=UTF-8
+encoding//WebContent/cms/main/portal.html=UTF-8
+encoding//WebContent/cms/main/sender/add.html=UTF-8
+encoding//WebContent/cms/main/sender/edit.html=UTF-8
+encoding//WebContent/cms/main/sender/sendManage.html=UTF-8
+encoding//WebContent/ui/video.html=UTF-8
 encoding/<project>=UTF-8
