--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,51 @@
 eclipse.preferences.version=1
+encoding//WebContent/cms/main/about.html=UTF-8
+encoding//WebContent/cms/main/bug.html=UTF-8
+encoding//WebContent/cms/main/friendlink/add.html=UTF-8
+encoding//WebContent/cms/main/friendlink/linkslist.html=UTF-8
+encoding//WebContent/cms/main/gonggao.html=UTF-8
+encoding//WebContent/cms/main/lives/livesManage.html=UTF-8
+encoding//WebContent/cms/main/lives/livesadd.html=UTF-8
+encoding//WebContent/cms/main/lives/livesedit.html=UTF-8
+encoding//WebContent/cms/main/messages/messagesManage.html=UTF-8
+encoding//WebContent/cms/main/messages/messagesadd.html=UTF-8
+encoding//WebContent/cms/main/messages/messagesedit.html=UTF-8
+encoding//WebContent/cms/main/movies/importmovies.html=UTF-8
+encoding//WebContent/cms/main/movies/moviesManage.html=UTF-8
+encoding//WebContent/cms/main/movies/moviesadd.html=UTF-8
+encoding//WebContent/cms/main/movies/moviesaddtags.html=UTF-8
+encoding//WebContent/cms/main/movies/moviesedit.html=UTF-8
+encoding//WebContent/cms/main/news/add.html=UTF-8
+encoding//WebContent/cms/main/news/catdel.html=UTF-8
+encoding//WebContent/cms/main/news/del.html=UTF-8
+encoding//WebContent/cms/main/news/edit.html=UTF-8
+encoding//WebContent/cms/main/news/index.html=UTF-8
+encoding//WebContent/cms/main/news/newslist.html=UTF-8
+encoding//WebContent/cms/main/news/newssort.html=UTF-8
+encoding//WebContent/cms/main/news/newssortadd.html=UTF-8
+encoding//WebContent/cms/main/news/newssortedit.html=UTF-8
+encoding//WebContent/cms/main/news/sortlistsort.html=UTF-8
+encoding//WebContent/cms/main/news/userManage.html=UTF-8
+encoding//WebContent/cms/main/news/useradd.html=UTF-8
+encoding//WebContent/cms/main/pictures/add.html=UTF-8
+encoding//WebContent/cms/main/pictures/index.html=UTF-8
+encoding//WebContent/cms/main/pictures/piclist.html=UTF-8
+encoding//WebContent/cms/main/portal.html=UTF-8
+encoding//WebContent/cms/main/qun.html=UTF-8
+encoding//WebContent/cms/main/repair.html=UTF-8
+encoding//WebContent/cms/main/sites/sitesManage.html=UTF-8
+encoding//WebContent/cms/main/sites/sitesadd.html=UTF-8
+encoding//WebContent/cms/main/sites/sitesedit.html=UTF-8
+encoding//WebContent/cms/main/sys_info.html=UTF-8
+encoding//WebContent/cms/main/tags/tagsManage.html=UTF-8
+encoding//WebContent/cms/main/tags/tagsadd.html=UTF-8
+encoding//WebContent/cms/main/tags/tagsedit.html=UTF-8
+encoding//WebContent/cms/main/trailers/importtrailers.html=UTF-8
+encoding//WebContent/cms/main/trailers/trailersManage.html=UTF-8
+encoding//WebContent/cms/main/trailers/trailersadd.html=UTF-8
+encoding//WebContent/cms/main/trailers/trailersaddtags.html=UTF-8
+encoding//WebContent/cms/main/trailers/trailersedit.html=UTF-8
+encoding//WebContent/cms/main/users/userManage.html=UTF-8
+encoding//WebContent/cms/main/users/useradd.html=UTF-8
+encoding//WebContent/cms/main/users/useredit.html=UTF-8
 encoding/<project>=UTF-8
