--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -6,7 +6,7 @@
 	http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
   <display-name></display-name>	
   <welcome-file-list>
-    <welcome-file>login.html</welcome-file>
+    <welcome-file>login1.html</welcome-file>
   </welcome-file-list>
   <filter>
   	<filter-name>struts2</filter-name>
